objects/GASSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Global Account Search Settings</description>
    <fields>
        <fullName>Account_Search_Field_Set__c</fullName>
        <description>List of fields, delimited by string, to use as search fields for the Account.  Sample value:
Name,FirstName,LastName,Specialty_1_vod__c.</description>
        <label>Account Search Field Set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Search_Field_Set__c</fullName>
        <description>List of fields, delimited by commas, of Address fields to search on. Sample value:
Name,City_vod__c,State_vod__c,Zip_vod__c,Phone_vod__c</description>
        <label>Address Search Field Set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Result_Field_Set__c</fullName>
        <description>List of fields, delimited by comma, to display in search results.  If any of these are Address fields, they must be prefixed by &apos;ADD.&apos;.  Sample value:
Name,ADD.Name,ADD.City_vod__c,ADD.State_vod__c,ADD.Zip_vod__c,Specialty_1_vod__c,ADD.Primary_vod__c</description>
        <label>Result Field Set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Show_All_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, display all addresses for an Account; otherwise, only display primary address. If no primary address, display the first one found.</description>
        <label>Show_All_Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_Alignment_History__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Account alignment changes will be recorded in the custom object GAS_Alignment_History_vts__c</description>
        <label>Track Alignment History</label>
        <type>Checkbox</type>
    </fields>
    <label>GASSettings</label>
</CustomObject>